--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,4 +1,4 @@
-<ul class="list-group">
-    <li class="list-group-item">An item</li>
+<ul class="list-group" *ngFor="let color of colors">
+    <li class="list-group-item">{{color.name}}</li>
    
   </ul>
