--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,24 @@
 <div class="container">
   <app-navi></app-navi>
-  <div class="row">
-    <div class="col md-3">
+  </div >
+  <div class="row" style="text-align:center;margin-left: 50px;">
+    <div class="col-md-2" >
+      <app-brand></app-brand>
+    </div>
+    <div class="col-md-2">
       <app-color></app-color>
     </div>
-    <div class="col md-9">
-      <app-car></app-car>
+    <div class="col-md-2">
+      <app-customer></app-customer>
     </div>
-  </div>
+    
+    <div class="col-md-3">
+      <app-car></app-car>
+    </div >
+    <div class="col-md-3">
+      <app-rental></app-rental>
+    </div>
+  
 
   <router-outlet></router-outlet>
 </div>
