--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,1 +1,25 @@
-<p>car works!</p>
+<div *ngIf="dataLoaded==false" class="spinner-border text-info" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+<table *ngIf="dataLoaded==true" class="table">
+    <tr >
+        <th>Id</th>
+        <th>Name</th>
+        <th>Brand Name</th>
+        <th>Color Name</th>
+        <th>Model Year</th>
+        <th>Daily Price</th>
+        <th>Descriptions</th>
+        
+    </tr>
+    <tr *ngFor="let car of cars">
+        <td>{{car.id}}</td>
+        <td>{{car.name}}</td>
+        <td>{{car.brandName}}</td>
+        <td>{{car.colorName}}</td>
+        <td>{{car.modelYear}}</td>
+        <td>{{car.dailyPrice}}</td>
+        <td>{{car.description}}</td>
+
+    </tr>
+</table>
