--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -12,7 +12,7 @@
         
         
     </tr>
-    <tr *ngFor="let car of cars">
+    <tr  (click)="setCurrentCar(car)" *ngFor="let car of cars" routerLink="/cars/detail/{{car.id}}">
         <td>{{car.id}}</td>
         <td>{{car.name}}</td>
         <td>{{car.brandName}}</td>
