--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,13 @@
 <div class="container">
   <app-navi></app-navi>
   </div >
-  <div class="row" style="text-align:center;margin-left: 50px;">
+  <div class="row" style="margin-left: 50px;margin-top: 20px;">
     <div class="col-md-2" >
       <app-brand></app-brand>
-    </div>
-    <div class="col-md-2">
       <app-color></app-color>
     </div>
-    <div class="col-md-8">
+
+    <div class="col-md-10">
       <router-outlet></router-outlet>
     </div>
     
