--- a/src/app/components/car-detail/car-detail.component.html
+++ b/src/app/components/car-detail/car-detail.component.html
@@ -3,14 +3,22 @@
         <div>
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">    
                 <div class="carousel-inner">
-                  <div *ngFor="let image of carimages  let i = index " [ngClass]="getSliderClassName(i)">
+                  <div *ngFor="let image of carImages  let i = index " [ngClass]="getSliderClassName(i)">
                   
-                   <img src="https://localhost:44305/wwwroot/uploads/002c73e6-aa22-4386-8748-c9913a650685_99_15_17.jfif" class="d-block w-100">
+                   <img src="{{baseUrl}}{{carImages.imagePath}}" class="d-block w-100">
                   </div>     
                 </div>
                
             </div>
         </div>
-        
+
     </div>
+
+
+
+
+
+
+
+
 </div>
