--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -63,7 +63,7 @@
   {{ filterText }} aradınız
 </div>
 <table style="margin-top: 20px" *ngIf="dataLoaded == true" class="table">
-  <tr>
+ <thead><tr>
     <th>Id</th>
     <th>Name</th>
     <th>Brand Name</th>
@@ -71,7 +71,7 @@
     <th>Model Year</th>
     <th>Daily Price</th>
     <th></th>
-  </tr>
+  </tr></thead>
   <tbody>
 
     <tr
