--- a/src/app/components/car-update/car-update.component.html
+++ b/src/app/components/car-update/car-update.component.html
@@ -1,1 +1,84 @@
-<p>car-update works!</p>
+<div class="content">
+    <div class="col-md-12">
+        <div class="card-header">
+            <h5 class="title">Ürün Ekle</h5>
+        </div>
+        <div class="card-body">
+            <form *ngIf="cars" [formGroup]="carAddForm">
+                
+                <div class="mb-3">
+
+                    <label for="name">Araba Id</label>
+                    <div class="form-group">
+                        <input type="number" id="id" formControlName="id" class="form-control"
+                            placeholder="Kategori" />
+                    </div>
+
+                </div>
+                <div class="mb-3">
+
+                <label for="name">Ürün Adı</label>
+                
+                <div class="form-group">
+                    <input type="text" id="name" formControlName="name" class="form-control" placeholder="Ürun adı" />
+                </div>
+                 
+            </div>
+
+                <div class="mb-3">
+
+                    <label for="name">Kategori</label>
+                    <div class="form-group">
+                        <input type="number" id="brandId" formControlName="brandId" class="form-control"
+                            placeholder="Kategori" />
+                    </div>
+
+                </div>
+                <div class="mb-3">
+
+                    <label for="name">Renk</label>
+                    <div class="form-group">
+                        <input type="number" id="colorId" formControlName="colorId" class="form-control"
+                            placeholder="Renk" />
+                    </div>
+
+                </div>
+                <div class="mb-3">
+
+                    <label for="name">Model Yılı</label>
+                    <div class="form-group">
+                        <input type="number" id="modelYear" formControlName="modelYear" class="form-control"
+                            placeholder="Model Yılı" />
+                    </div>
+
+                </div>
+                <div class="mb-3">
+
+                    <label for="name">Günlük Ücret</label>
+                    <div class="form-group">
+                        <input type="number" id="dailyPrice" formControlName="dailyPrice" class="form-control"
+                            placeholder="Günlük Ücret" />
+                    </div>
+
+                </div>
+                <div class="mb-3">
+
+                    <label for="name">Açıklama</label>
+                    <div class="form-group">
+                        <input type="text" id="descriptions" formControlName="descriptions" class="form-control"
+                            placeholder="Açıklama" />
+                    </div>
+
+                </div>
+            
+            </form>
+            <div class="card-footer">
+                <button class="btn btn-primary" (click)="update()">Güncelle</button>
+            </div> 
+          
+        </div>
+
+
+
+    </div>
+</div>
