--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,5 +1,6 @@
   <li  [class]="getAllBrandClass()"   routerLink="/cars">Tümünü Getir</li>
 <div class="alert alert-primary">
+  <p><button class="btn btn-primary"  routerLink="/brands/list">Tüm markaları gör</button></p>
   <h6 style="font-size: large; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Marka filtrele</h6>
 <div class="mb-3"> 
  <label for="exampleFormControlInput1" class="form-label">İsme Göre Arama</label>
