--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -4,6 +4,7 @@
 <div class="alert alert-primary">
    <h6 style="font-size: large; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Renk filtrele</h6>
 <div class="mb-3">
+ <p><button class="btn btn-primary"  routerLink="/colors/list">Tüm renkleri gör</button></p> 
   <label for="exampleFormControlInput1" class="form-label">İsme Göre Arama</label>
   <input type="text" [(ngModel)]="filterText" class="form-control" id="filterText" placeholder="Aranacak rengi girin">
 </div>
