--- a/src/app/components/brand-list/brand-list.component.html
+++ b/src/app/components/brand-list/brand-list.component.html
@@ -16,3 +16,6 @@
         </button> </td></tr>
     </tbody>
 </table>
+<button class="btn btn-warning" routerLink="/brands/add">
+Marka Ekle
+</button>
