--- a/src/app/components/color-list/color-list.component.html
+++ b/src/app/components/color-list/color-list.component.html
@@ -16,4 +16,9 @@
         </button> </td></tr>
     </tbody>
 </table>
+<button class="btn btn-warning" routerLink="/colors/add">
+    Renk Ekle
+
+  </button>
+
 
