--- a/src/app/components/rental-add/rental-add.component.html
+++ b/src/app/components/rental-add/rental-add.component.html
@@ -43,7 +43,7 @@
               type="text"
               disabled="disabled"
               class="form-control"
-              [value]="car.dailyPrice "
+              [value]="car?.dailyPrice "
             />
           </div>
         </div>
