--- a/src/app/components/customer/customer.component.html
+++ b/src/app/components/customer/customer.component.html
@@ -2,11 +2,13 @@
 <table  class="table">
     <tr >
         <th>Customer's Names</th>
+        <th>Customer's Findeks</th>
         
         
     </tr>
     <tr *ngFor="let customer  of customers">
         <td>{{customer.companyName}}</td>
+        <td>{{customer.findeks}}</td>
 
 
     </tr>
