--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -24,6 +24,9 @@
           />
           <label for="floatingPassword" >Parola</label>
         </div>
+        <div class="form-floating">
+            <p>Bir hesabınız yok mu?Hemen<a routerLink="/register" class="link-primary" style="text-decoration:none"> Kaydol</a></p>
+        </div>
 
         <div class="checkbox mb-3">
           <label>
