--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -70,6 +70,7 @@
     <th>Color Name</th>
     <th>Model Year</th>
     <th>Daily Price</th>
+    <th>Findeks Score</th>
     <th></th>
   </tr></thead>
   <tbody>
@@ -85,6 +86,7 @@
       <td>{{ car.colorName }}</td>
       <td>{{ car.modelYear }}</td>
       <td>{{ car.dailyPrice }}</td>
+      <td>{{ car.findeksScore }}</td>
       <td>
         <button (click)="addToCart(car)" type="button" class="btn btn-primary">
           Sepete Ekle
